...
                onValueChange = {
                    newName = it
                    viewModel.consumeEvent()
                },
                label = stringResource(R.string.tag_new_name),
                errorRes = if (event is TagsEvent.RenameDuplicate) R.string.tag_rename_duplicate else null,
                testTagValue = "tag_rename_input",
                onDark = true,
            )
            Spacer(modifier = Modifier.height(16.dp))
            Row {
                Spacer(modifier = Modifier.weight(1f))
                PillButton(
...
